Fix search bar opacity, it didn't have enough contrast

--- a/app/_assets/stylesheets/docsearch.less
+++ b/app/_assets/stylesheets/docsearch.less
@@ -28,11 +28,10 @@
   color: #fff;
   width: 100%;
   padding: 0 16px;
-  opacity: 0.5;
+  opacity: 1;
 
   &:hover {
     background: #666C70;
-    opacity: 0.7;
   }
 
   .DocSearch-Search-Icon {
